Added breed loading indicator, update user and modal logic
- Added NzSpinModule for loading spinner support.
- Enhanced breed loading logic in pet modal component.
- Refined user model to include username and email properties.

--- a/src/app/components/pet-modal/pet-modal.component.html
+++ b/src/app/components/pet-modal/pet-modal.component.html
@@ -90,9 +90,13 @@
             nzShowSearch
             nzAllowClear
             nzPlaceHolder="Select a breed"
-            [nzDisabled]="!petForm.get('speciesUuid')?.value"
+            [nzDisabled]="!petForm.get('speciesUuid')?.value || isBreedsLoading"
+            [nzLoading]="isBreedsLoading"
           >
             <nz-option *ngFor="let breed of breedList" [nzLabel]="breed.name" [nzValue]="breed.uuid"></nz-option>
+            <nz-option *ngIf="!isBreedsLoading && breedList.length === 0" nzDisabled nzCustomContent>
+              No breeds available
+            </nz-option>
           </nz-select>
         </nz-form-control>
       </nz-form-item>
