--- a/src/app/components/login/login-form/login-form.component.html
+++ b/src/app/components/login/login-form/login-form.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full p-8 space-y-6 bg-white rounded-lg shadow-lg"
+  class="p-8 space-y-6 w-full bg-white rounded-lg shadow-lg"
 >
   <h2 class="text-3xl font-bold text-center text-gray-800">
     Login to Your Account
@@ -12,7 +12,7 @@
       <input
         type="email"
         id="email"
-        class="w-full px-4 py-2 mt-1 border rounded-md focus:border-purple-500 focus:ring focus:ring-purple-200"
+        class="px-4 py-2 mt-1 w-full rounded-md border focus:border-purple-500 focus:ring focus:ring-purple-200"
         placeholder="Enter your email"
         required
         [(ngModel)]="email"
@@ -26,7 +26,7 @@
       <input
         type="password"
         id="password"
-        class="w-full px-4 py-2 mt-1 border rounded-md focus:border-purple-500 focus:ring focus:ring-purple-200"
+        class="px-4 py-2 mt-1 w-full rounded-md border focus:border-purple-500 focus:ring focus:ring-purple-200"
         placeholder="Enter your password"
         required
         [(ngModel)]="password"
@@ -38,28 +38,38 @@
         >
       </div>
     </div>
-    <div class="flex items-center justify-between">
+    <div class="flex justify-between items-center">
       <div class="flex items-center">
         <input
           id="remember-me"
           type="checkbox"
-          class="w-4 h-4 border-gray-300 rounded focus:ring-purple-500"
+          class="w-4 h-4 rounded border-gray-300 focus:ring-purple-500"
         />
         <label for="remember-me" class="block ml-2 text-sm text-gray-800"
           >Remember Me</label
         >
       </div>
-      <a href="#" class="text-sm hover:underline">Sign Up</a>
+      <a class="text-sm hover:underline" (click)="openRegisterForm()">Sign Up</a>
     </div><button nz-button nzType="primary"  class="mr-4" (click)="login()" nzBlock="true">Login</button>
   </form>
-  <div class="flex items-center justify-between mt-4">
+  <div class="flex justify-between items-center mt-4">
     <hr class="w-full" />
     <span class="p-2 text-xs text-gray-400 uppercase">or login with</span>
     <hr class="w-full" />
   </div>
   <div>
-    <button nz-button nzType="primary" class="mb-2 mr-4" nzBlock="true">Login with Google</button>
+    <button nz-button nzType="primary" class="mr-4 mb-2" nzBlock="true">Login with Google</button>
     <button nz-button nzType="primary" class="mr-4 bg-blue-700 hover:bg-blue-900" nzBlock="true">Login with Facebook</button>
   </div>
   <p class="text-xs text-center text-gray-400">Your data is safe with us</p>
 </div>
+
+<app-register
+*ngIf="isRegisterFormVisible"
+[isRegisterFormVisible]="isRegisterFormVisible"
+(onCancel)="onHandleCancel()"
+>
+
+</app-register>
+
+
