Added phone and address fields with validation
- Add phone number and address fields to registration form
- Implement validation rules (phone: 9-20 chars, address: 10-255 chars)
- Add error message handling for new fields

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -64,6 +64,22 @@
           <input nz-input formControlName="emso" id="emso" />
         </nz-form-control>
       </nz-form-item>
+
+      <!-- Phone Number -->
+      <nz-form-item>
+        <nz-form-label [nzSm]="6" nzRequired nzFor="phoneNumber">Phone Number</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzErrorTip]="getPhoneNumberErrorMessage()">
+          <input nz-input formControlName="phoneNumber" id="phoneNumber" />
+        </nz-form-control>
+      </nz-form-item>
+
+      <!-- Address -->
+      <nz-form-item>
+        <nz-form-label [nzSm]="6" nzRequired nzFor="address">Address</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzErrorTip]="getAddressErrorMessage()">
+          <input nz-input formControlName="address" id="address" />
+        </nz-form-control>
+      </nz-form-item>
     </form>
   </ng-container>
 </nz-modal>
